--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,19 @@ html,body{
     margin: 0;
     padding: 0;
     width: 100%;
+
+}
+
+video#bgvid {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-height: 100%;
+    min-width: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -webkit-transform:translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+
+}
