--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,14 @@
 html,body{
+    position: relative;
     margin: 0;
     padding: 0;
     width: 100%;
+    font-family: abel;
 
+}
+.body-wrapper {
+	max-width: 1700px;
+    margin: 0 auto;
 }
 ul{
     list-style: none;
@@ -37,5 +43,12 @@ video#bgvid {
     z-index: -100;
     -webkit-transform:translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
+
+}
+.card {
+    position: absolute;
+    top: ;
+    width: 25%;
+	color: #fff;
 
 }
