--- a/css/main.css
+++ b/css/main.css
@@ -46,9 +46,23 @@ video#bgvid {
 
 }
 .card {
+    text-align: center;
     position: absolute;
     top: ;
     width: 25%;
 	color: #fff;
 
+}
+.card a{
+    text-decoration: none;
+    color: gray;
+}
+.link {
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+	background-color: darkslategray;
 }
