--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,11 @@ ul li a{
     color: lightgray;
     text-decoration: none;
 }
+ul li a:hover{
+    width: 100px;
+    height: 200px;
+    background: #fff;
+}
 hr.line {
 	/*border-top: 1px solid #8c8b8b;*/
 	border-bottom: .5px solid #fff;
@@ -58,6 +63,7 @@ video#bgvid {
     color: gray;
 }
 .link {
+    padding: 2% 0;
     border-top: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
     border-top-right-radius: 3px;
