--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ hr.line {
 	/*border-top: 1px solid #8c8b8b;*/
 	border-bottom: .5px solid #fff;
 }
+.actors ul li {
+	display: inline-block;
+    margin-left: 5%;
+}
 video{
     filter: brightness(40%);
     -webkit-filter: brightness(40%);
@@ -53,7 +57,8 @@ video#bgvid {
 .card {
     text-align: center;
     position: absolute;
-    top: ;
+    margin-top: 10%;
+    right: 10% ;
     width: 25%;
 	color: #fff;
 
@@ -71,4 +76,8 @@ video#bgvid {
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
 	background-color: darkslategray;
+    transition: all .2s ease;
+}
+.link:hover{
+    border-spacing: 30px;
 }
