--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html,body{
 .body-wrapper {
 	max-width: 1700px;
     margin: 0 auto;
+    padding: 0
 }
 ul{
     list-style: none;
@@ -42,7 +43,10 @@ video{
     -moz-filter: brightness(40%);
 
 }
-video#bgvid {
+footer{
+    color: #fff;
+}
+/*video#bgvid {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -54,7 +58,7 @@ video#bgvid {
     -webkit-transform:translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
 
-}
+}*/
 .card {
     text-align: center;
     position: absolute;
@@ -65,6 +69,7 @@ video#bgvid {
 
 }
 .card a{
+    padding: 2% 0;
     text-decoration: none;
     color: gray;
 }
